# Fastapi_Bit

./: .env  .gitignore  README.md  history.db  pyproject.toml  users.db
app/: dependencies.py  main.py
app/api/: __init__.py  routes_active.py  routes_register.py  routes_users.py
app/core/: __init__.py  db.py  db_creator.py  db_history.py  db_tenant.py  db_users.py  init_db.py  settings.py
app/forms/: __init__.py  add_active_form.py  add_results_form.py  login_form.py  register_form.py  sell_active.py  update_active.py
app/js/: close_x.js  create.js  history.js  login.js  profile.js  register.js  sell.js  update.js  update_user.js
app/middleware/: __init__.py  sessions.py
app/models/: __init__.py  actives.py  history.py  login.py  register.py  results.py  user.py
app/schemas/: __init__.py  actives.py  login.py  register.py  results.py  sell.py  update.py
app/services/: __init__.py  actives_service.py  auth_service.py  history_service.py
app/static/Images/: artist-man.avif  pic.avif
app/static/Images/Background/: Стокове фото Свічковий Графік І Дані Фінансового Ринку — Завантажте зображення зараз - Фондовий ринок, Інвестиція, Дані фондового ринк.html
app/static/css/: flash_message.css  modal.css  style.css  welcome.css
app/templates/: base.html  base1.html  create.html  delProf.html  dell.html  index.html  login.html  main.html  modal.html  page404.html  profile.html  record.html  register.html  update.html  welcome.html
app/users_db/: db_1.db  db_2.db  db_3.db  db_5.db
(+19 files in other folders)
